<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="16dp"
    android:paddingRight="24dp"
    tools:context=".PhoneNumberActivity"
>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/heading"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="100dp"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_sign"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_no">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/otp_sent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sent_otp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
             />

        <TextView
            android:id="@+id/countdown_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alpha"
            android:layout_above="@+id/get_otp"
            android:layout_alignRight="@+id/get_otp"

            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:visibility="visible" />

        <TextView

            android:id="@+id/get_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otp_sent"
            android:layout_alignParentEnd="true"
            android:text="@string/get_otp"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/resend_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otp_sent"
            android:layout_alignParentStart="true"
            android:text="@string/resend_otp"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:visibility="visible" />

        <Button

            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/get_otp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/login" />
    </RelativeLayout>
</LinearLayout>